Screen Components/CSV to Custom Metadata Records Component/objects/MetadataDeploymentResult__e/MetadataDeploymentResult__e.object-meta.xml
<CustomObject>
    <label>MetadataDeploymentResult</label>
    <pluralLabel>MetadataDeploymentResults</pluralLabel>
</CustomObject>