Screen Components/CSV to Custom Metadata Records Component/objects/MetadataDeploymentResult__e/fields/DummyField__c.field-meta.xml
<CustomField>
    <fullName>DummyField__c</fullName>
    <description>This field is used for CSVToCMDTRecordsControllerTest Class purpose.</description>
    <label>DummyField</label>
    <length>10</length>
    <type>Text</type>
</CustomField>