Screen Components/CSV to Custom Metadata Records Component/objects/MetadataDeploymentResult__e/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>