Screen Components/CSV to Custom Metadata Records Component/objects/MetadataDeploymentResult__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>